[gd_scene load_steps=4 format=2]

[ext_resource path="res://gameplay/Scout.gd" type="Script" id=1]
[ext_resource path="res://assets/scout_100x100.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 36.7328
height = 28.8554

[node name="Scout" type="KinematicBody2D" index="0" groups=[
"enemy",
]]

scale = Vector2( 0.5, 0.5 )
input_pickable = false
collision_layer = 128
collision_mask = 131
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
speed = 1

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Offset" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="TargetTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="MissileTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[connection signal="timeout" from="TargetTimer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="MissileTimer" to="." method="_on_MissileTimer_timeout"]


